--- a/iot_ui/templates/pages/iot_devinfo.html
+++ b/iot_ui/templates/pages/iot_devinfo.html
@@ -121,7 +121,7 @@
                                 </div>
 
                                 <div>
-                                <table id="RTValue-Table"  class="display responsive nowrap tooltip-options" data-toggle="tooltip" cellspacing="0" width="100%" title="<h3>点击第2列查看历史数据</h3>">
+                                <table id="RTValue-Table"  class="display responsive nowrap" cellspacing="0" width="100%">
                                     <thead>
                                         <tr>
                                             <th>{{_('Name')}}</th>
