--- a/iot_ui/templates/pages/iot_ent_structure.html
+++ b/iot_ui/templates/pages/iot_ent_structure.html
@@ -323,7 +323,7 @@
                 <div id="signup-box" class="signup-box widget-box no-border">
                     <div class="widget-body">
                         <div class="widget-main">
-                            <p>  {{_('Enter New User details')}}:  </p>
+                            <p>  {{_('输入新用户详情')}}:  </p>
 
                               <form action="" id="add_newuser_form" role="form">
 
