--- a/iot_ui/templates/pages/iot_ent_structure.html
+++ b/iot_ui/templates/pages/iot_ent_structure.html
@@ -334,7 +334,7 @@
 
                                 <div class="form-group">
                                   <label class="control-label">名字</label>
-                                  <input class="form-control" id="newuserFname" data-validation="custom" data-validation-regexp="^(?!_)(?!.*?_$)[a-zA-Z0-9_\u4e00-\u9fa5]+$" type="text" data-validation-error-msg="请输入正确的人命，如：小明">
+                                  <input class="form-control" id="newuserFname" data-validation="custom" data-validation-regexp="^(?!_)(?!.*?_$)[a-zA-Z0-9_\u4e00-\u9fa5]+$" type="text" data-validation-error-msg="请输入正确的人名，如：小明">
                                 </div>
 
                                 <div class="form-group">
