--- a/iot_ui/templates/pages/weui_rtdata.html
+++ b/iot_ui/templates/pages/weui_rtdata.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <title>设备数据-{{dev_desc}}</title>
+    <title>实时数据-{{dev_desc}}</title>
     <link rel="stylesheet" href="/assets/iot_ui/assets/css/weui.min.css">
     <link rel="stylesheet" href="/assets/iot_ui/assets/css/jquery-weui.min.css">
     <link rel="stylesheet" href="/assets/iot_ui/assets/css/iconfont.css">
@@ -97,7 +97,7 @@ footer a {
 
 <body ontouchstart="">
 
-      <h2 class="demos-second-title">{{dev_desc}}实时数据</h2>
+      <h2 class="demos-second-title">{{dev_desc}}</h2>
 
 <!--设备数据-->
 
