--- a/iot_ui/templates/pages/weui_devices.html
+++ b/iot_ui/templates/pages/weui_devices.html
@@ -175,10 +175,10 @@ var total_pages=1;
                 for(var i=0;i<userdevices.length;i++){
                     // console.log(userdevices[i].device_status);
                     if(userdevices[i].device_status=="ONLINE"){
-                        var device_clolor = '<p class="dev-online">'+ userdevices[i].device_desc +'</p>'
+                        var device_clolor = '<p class="dev-online">'+ userdevices[i].device_desc+ '('+ userdevices[i].device_name+ ')' +'</p>'
                     }
                     else{
-                        var device_clolor = '<p class="dev-offline">'+ userdevices[i].device_desc +'</p>'
+                        var device_clolor = '<p class="dev-offline">'+ userdevices[i].device_desc+ '('+ userdevices[i].device_name+ ')' +'</p>'
                     }
                     $("div.device-list").append(
                         '<a class="weui-cell weui-cell_access show-actions" data-id="'+ userdevices[i].device_sn +'" href="javascript:;">'
@@ -195,10 +195,10 @@ var total_pages=1;
                 for(var i=(current_page - 1) * count_perpage;i<current_page*count_perpage;i++){
                     // console.log(userdevices[i].device_status);
                     if(userdevices[i].device_status=="ONLINE"){
-                        var device_clolor = '<p class="dev-online">'+ userdevices[i].device_desc +'</p>'
+                        var device_clolor = '<p class="dev-online">'+ userdevices[i].device_desc+ '('+ userdevices[i].device_name+ ')' +'</p>'
                     }
                     else{
-                        var device_clolor = '<p class="dev-offline">'+ userdevices[i].device_desc +'</p>'
+                        var device_clolor = '<p class="dev-offline">'+ userdevices[i].device_desc+ '('+ userdevices[i].device_name+ ')' +'</p>'
                     }
                     $("div.device-list").append(
                         '<a class="weui-cell weui-cell_access show-actions" data-id="'+ userdevices[i].device_sn +'" href="javascript:;">'
@@ -234,10 +234,10 @@ var total_pages=1;
         for (var i = (current_page - 1) * count_perpage; i < current_page * count_perpage; i++) {
             // console.log(userdevices[i]);
             if (userdevices[i].device_status == "ONLINE") {
-                var device_clolor = '<p class="dev-online">' + userdevices[i].device_desc + '</p>'
+                var device_clolor = '<p class="dev-online">' + userdevices[i].device_desc+ '('+ userdevices[i].device_name+ ')' + '</p>'
             }
             else {
-                var device_clolor = '<p class="dev-offline">' + userdevices[i].device_desc + '</p>'
+                var device_clolor = '<p class="dev-offline">' + userdevices[i].device_desc+ '('+ userdevices[i].device_name+ ')' + '</p>'
             }
             $("div.device-list").append(
                 '<a class="weui-cell weui-cell_access show-actions" data-id="' + userdevices[i].device_sn + '" href="javascript:;">'
@@ -277,10 +277,10 @@ var total_pages=1;
                 for(var i=(current_page-1)*count_perpage;i<current_page*count_perpage;i++){
                     // console.log(userdevices[i]);
                     if(userdevices[i].device_status=="ONLINE"){
-                        var device_clolor = '<p class="dev-online">'+ userdevices[i].device_desc +'</p>'
+                        var device_clolor = '<p class="dev-online">'+ userdevices[i].device_desc+ '('+ userdevices[i].device_name+ ')' +'</p>'
                     }
                     else{
-                        var device_clolor = '<p class="dev-offline">'+ userdevices[i].device_desc +'</p>'
+                        var device_clolor = '<p class="dev-offline">'+ userdevices[i].device_desc+ '('+ userdevices[i].device_name+ ')' +'</p>'
                     }
                     $("div.device-list").append(
                         '<a class="weui-cell weui-cell_access show-actions" data-id="'+ userdevices[i].device_sn +'" href="javascript:;">'
@@ -300,10 +300,10 @@ var total_pages=1;
                 for(var i=(current_page-1)*count_perpage;i<userdevices.length;i++){
                     // console.log(userdevices[i]);
                     if(userdevices[i].device_status=="ONLINE"){
-                        var device_clolor = '<p class="dev-online">'+ userdevices[i].device_desc +'</p>'
+                        var device_clolor = '<p class="dev-online">'+ userdevices[i].device_desc+ '('+ userdevices[i].device_name+ ')' +'</p>'
                     }
                     else{
-                        var device_clolor = '<p class="dev-offline">'+ userdevices[i].device_desc +'</p>'
+                        var device_clolor = '<p class="dev-offline">'+ userdevices[i].device_desc+ '('+ userdevices[i].device_name+ ')' +'</p>'
                     }
                     $("div.device-list").append(
                         '<a class="weui-cell weui-cell_access show-actions" data-id="'+ userdevices[i].device_sn +'" href="javascript:;">'
