--- a/iot_ui/templates/pages/iot_event_info.html
+++ b/iot_ui/templates/pages/iot_event_info.html
@@ -29,18 +29,18 @@
         {{_('Details')}}
         <small>
             <i class="ace-icon fa fa-angle-double-right"></i>
-            {{eventid}}
+            溢水报警通知
         </small>
     </h1>
 </div><!-- /.page-header -->
 <div class="profile-user-info profile-user-info-striped">
-    <div class="profile-info-row">
-        <div class="profile-info-name"> {{_('Variable or label')}} </div>
+    <!--<div class="profile-info-row">-->
+        <!--<div class="profile-info-name"> {{_('Variable or label')}} </div>-->
 
-        <div class="profile-info-value">
-            <span class="editable" id="error_key">{{ error_key }}</span>
-        </div>
-    </div>
+        <!--<div class="profile-info-value">-->
+            <!--<span class="editable" id="error_key">{{ error_key }}</span>-->
+        <!--</div>-->
+    <!--</div>-->
 
     <div class="profile-info-row">
         <div class="profile-info-name"> {{_('Device for event')}} </div>
